--- a/biome.json
+++ b/biome.json
@@ -24,8 +24,11 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "double",
-      "trailingComma": "es5",
-      "semicolons": "always"
+      "semicolons": "always",
+      "trailingCommas": "es5"
     }
+  },
+  "files": {
+    "ignore": ["duck-duck-mcp/*", "mcp-webresearch/*"]
   }
 }
