--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
     "test:coverage": "vitest run --coverage",
     "format": "biome format --write .",
     "lint": "biome check .",
-    "lint:fix": "biome check --apply ."
+    "lint:fix": "biome check --apply .",
+    "lint-unsafe:fix": "biome check --unsafe ."
   },
-  "keywords": [
-    "mcp",
-    "duckduckgo",
-    "web-research",
-    "screenshot"
-  ],
+  "keywords": ["mcp", "duckduckgo", "web-research", "screenshot"],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -34,6 +30,7 @@
     "@biomejs/biome": "1.9.4",
     "@types/node": "22.13.1",
     "@types/turndown": "5.0.5",
+    "@vitest/coverage-istanbul": "^3.0.5",
     "@vitest/coverage-v8": "3.0.5",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
